# LHOP

./: README.md
lhop2/src/: CMakeLists.txt
lhop2/src/core/: documentation.h
lhop2/src/core/feature_extraction/: abstract_feature_extraction.cpp  abstract_feature_extraction.h  filterbank_feature_extraction.cpp  filterbank_feature_extraction.h
lhop2/src/core/inference/: abstract_inference.cpp  abstract_inference.h  category_inference.cpp  category_inference.h  generic_inference.cpp  generic_inference.h
lhop2/src/core/inference/indexing_blocks/: center_indexing.h  center_indexing.hpp
lhop2/src/core/inference/matching_blocks/: schur_product_matching.h  schur_product_matching.hpp
lhop2/src/core/inference/selection_blocks/: shape_check_selection.cpp  shape_check_selection.h
lhop2/src/core/input_output/: groupable_object.h  input_object.h  input_preprocessing.cpp  input_preprocessing.h  output_object.h  output_postprocessing.cpp  output_postprocessing.h
lhop2/src/core/learning/: abstract_learning.cpp  abstract_learning.h  generic_learning.cpp  generic_learning.h
lhop2/src/core/learning/generator_blocks/: cooccurrence_statistics.cpp  cooccurrence_statistics.h  shape_context.cpp  shape_context.h  subpart_based_generator.cpp  subpart_based_generator.h
lhop2/src/core/learning/pruning_blocks/: coverage_optimization.cpp  coverage_optimization.h
lhop2/src/core/legacy/: constants.h  init.cpp  init.h  layer_1_result.cpp  layer_1_result.h  layers.cpp  layers.h  part_lib.cpp  part_lib.h
lhop2/src/core/legacy/inference/: layer_1_creators.cpp  layer_1_creators.h  layer_n_creators.cpp  layer_n_creators.h
lhop2/src/core/legacy/learning/: layer_learning.cpp  layer_learning.h  map_learning.cpp  map_learning.h  object_learning.cpp  object_learning.h  optimization.cpp  optimization.h  optimization_learning.cpp  optimization_learning.h  part_learning.cpp  (+1 more)
lhop2/src/core/structures/: attached_extension.cpp  attached_extension.h  parse_tree.cpp  parse_tree.h  responses_array.cpp  responses_array.h  serializers.cpp  serializers.h  serializers_text.cpp  serializers_text.h  vocabulary.cpp  vocabulary.h
lhop2/src/modules/histogram-of-compositions/: hoc.cpp  hoc.h
lhop2/src/tools/: CMakeLists.txt  file_input.cpp  file_input.h  file_output.h  legacy_toolset_feature_extraction.cpp  legacy_toolset_inference.cpp  main_toolset.h  toolset_feature_extraction.cpp  toolset_inference.cpp  toolset_learning.cpp  utils_toolset.cpp
lhop2/src/tools/laydisplay/: laydisplay.cpp
lhop2/src/tools/lhop/: main_lhop.cpp
lhop2/src/utils/: class_register.h  config_dictionary.cpp  config_dictionary.h  configuration.cpp  configuration.h  exceptions.h  fonts.h  hopmath.cpp  hopmath.h  img.cpp  img.h  mapreduce.h  matrix.h  misc.cpp  misc.h  ocv.cpp  ocv.h  platform.h  reporting.h  structures.h  toolset.h  utils.cpp  utils.h  uuid.cpp  uuid.h
lhop2/src/utils/graphs/: graph.cpp  graph.h  graph_edges.cpp  graph_edges.h  graph_nodes.cpp  graph_nodes.h  graph_utils.cpp  graph_utils.h  img_graph.cpp  img_graph.h
lhop2/src/utils/matching/: matching.cpp  matrix_munkres.h  matrix_munkres.hpp  munkres.cpp  munkres.h
lhop2/src/utils/serialization/: serialization.cpp  serialization.h  streamed_pointer.cpp  streamed_pointer.h  streaming.cpp  streaming.h  zlib_compress.cpp  zlib_compress.h
lhop_v1/: CMakeLists.txt  readme.txt
lhop_v1/src/: CMakeLists.txt  winhop_set_paths_x64.bat.in  winhop_set_paths_x86.bat.in
lhop_v1/src/graphs/: graph.cpp  graph.h  graph_utils.cpp  graph_utils.h  img_graph.cpp  img_graph.h
lhop_v1/src/interface/: CMakeLists.txt  ReadMe.txt  hop.cpp  hop.h  hopcreate.cpp  hoplearning.cpp  hoplearning_tools.cpp  hopstorage.cpp  hopstorage.h  libmain.cpp
lhop_v1/src/interface/java/: CMakeLists.txt  MANIFEST.MF  classpath.in  java.i  project.in
lhop_v1/src/interface/protobuf/: hop.proto
lhop_v1/src/layers/: dllmain.cpp  hoc.cpp  hoc.h  img_log_gabor.txt  initialization.cpp  initialization.h  layer_1.cpp  layer_1.h  layer_1_creators.cpp  layer_1_creators.h  layer_1_result.cpp  layer_1_result.h  layer_learning.cpp  layer_learning.h  layer_n_creators.cpp  layer_n_creators.h  layers.cpp  layers.h  ocl_layer_1_creators.cpp  ocl_layer_n_creators.cpp  optimization.cpp  optimization.h  part_lib.cpp  part_lib.h
lhop_v1/src/opencl/: clContextManager.cpp  clContextManager.h  cl_structures.h  cl_utils.cpp  cl_utils.h  kernel_paths.h
lhop_v1/src/opencl/kernels/: add_layer1.cl  convolution.cl  convolution16.cl  convolution4.cl  convolution8.cl  core_convolution.cl  create_layer0.cl  make_convolution.cl  parallel_reduction.cl  parallel_scan.cl  parallel_sort.cl  utils.cl
lhop_v1/src/tools/: CMakeLists.txt
lhop_v1/src/tools/apisample/: apisample.cpp
lhop_v1/src/tools/lay1create/: lay1config.cfg.in  lay1create.cpp
lhop_v1/src/tools/laydisplay/: laydisplay.cpp
lhop_v1/src/tools/laylearning/: laylearning.cpp
lhop_v1/src/tools/layncreate/: layncreate.cpp
lhop_v1/src/tools/layserver/: layserver.cpp
lhop_v1/src/tools/test/: test.cpp
lhop_v1/src/utils/: atom.cpp  atom.h  convert.h  exceptions.h  hopmath.cpp  hopmath.h  img.cpp  img.h  imgutils.cpp  imgutils.h  mapreduce.h  matrix.h  misc.cpp  misc.h  ocv.cpp  ocv.h  smemory.h  streaming.cpp  streaming.h  structures.cpp  structures.h  utils.cpp  utils.h  zlib_compress.cpp  zlib_compress.h
lhop_v1/src/utils/matching/: matching.cpp  matching.h  matrix.cpp  munkres.cpp
lhop_v1/winhop/: visview_instuctions.txt  winhop.sln
lhop_v1/winhop/VisView/: D3D.cpp  D3D.h  InfoDialog.cpp  InfoDialog.h  ODComboBox.cpp  ODComboBox.h  ReadMe.txt  VideoDialog.cpp  VideoDialog.h  VisView.cpp  VisView.h  VisView.rc  VisView.vcproj  VisView.vcxproj  VisView.vcxproj.filters  VisViewDlg.cpp  VisViewDlg.h  controls.cpp  controls.h  interface.cpp  interface.h  resource.h  stdafx.cpp  stdafx.h
lhop_v1/winhop/VisView/res/: VisView.rc2
lhop_v1/winhop/interface/: interface.cpp  interface.h  interface.vcproj  interface.vcxproj  interface.vcxproj.filters
lhop_v1/winhop/testcode/: stdafx.h  test.cpp  test.vcproj  test.vcxproj  test.vcxproj.filters
(+521 files in other folders)
