# -*- Mode: CMake; indent-tabs-mode: nil; c-basic-offset: 4; tab-width: 4 -*- *

FIND_PACKAGE(Java REQUIRED)
FIND_PACKAGE(JNI REQUIRED)
INCLUDE(Java)

INCLUDE_DIRECTORIES(AFTER SYSTEM ./java)

#IF (NOT JAVA_INCLUDE_PATH)
#    IF (UNIX)
#	    SET(JAVA_INCLUDE_PATH /usr/lib/jvm/java-6-sun/include/)
#        SET(JAVA_INCLUDE_PATH2 /usr/lib/jvm/java-6-sun/include/linux/)
#    ENDIF (UNIX)
#ENDIF (NOT JAVA_INCLUDE_PATH)

INCLUDE_DIRECTORIES(${JAVA_INCLUDE_PATH} ${JAVA_INCLUDE_PATH2} ../)

INCLUDE(FindSWIG)
INCLUDE(UseSWIG)
SET(JAVA_SWIG_DIR ${CMAKE_CURRENT_BINARY_DIR})
SET(CMAKE_SWIG_FLAGS "-package;com.vicos.hop;-c++")
SET(CMAKE_SWIG_OUTDIR ${JAVA_SWIG_DIR}/com/vicos/hop)

FILE(GLOB_RECURSE JAVA_FILES_LIST ${CMAKE_CURRENT_SOURCE_DIR}/src/*.java)
JAVA_DEPENDS(${CMAKE_CURRENT_SOURCE_DIR}/src ${PROJECT_BINARY_DIR}/jhop JAVA_CLASS_LIST)

SET_SOURCE_FILES_PROPERTIES(${CMAKE_CURRENT_SOURCE_DIR}/java.i PROPERTIES CMAKE_SWIG_FLAGS "-includeall")
SET_SOURCE_FILES_PROPERTIES(${CMAKE_CURRENT_SOURCE_DIR}/java.i PROPERTIES CPLUSPLUS TRUE)

SET(SWIG_MODULE_jhop_EXTRA_DEPS ../hop.h)
SWIG_ADD_MODULE(jhop java java.i)
SWIG_LINK_LIBRARIES(jhop hop)

MAKE_DIRECTORY(${JAVA_SWIG_DIR}/com/vicos/hop)
MAKE_DIRECTORY(${PROJECT_BINARY_DIR}/jhop)

SET(JAVA_GENERATED_SRC "${JAVA_SWIG_DIR}/com/vicos/hop/*.java")
SET(JAVA_GENERATED_CLASS ${PROJECT_BINARY_DIR}/jhop/com/vicos/hop/JHOP.class)

SET(JARS)

IF (CREATE_PROTOBUF)
    PROTOBUF_GEN_JAVA(PROTO_SRCS com.vicos.hop.proto ../protobuf/hop.proto)
    LIST(APPEND JAVA_FILES_LIST "${PROTO_SRCS}")
    JAVA_FIND_JAR(JARS protobuf.jar)
ENDIF (CREATE_PROTOBUF)

ADD_CUSTOM_COMMAND(OUTPUT ${PROJECT_BINARY_DIR}/jhop/com/vicos/hop/JHOP.class ${JAVA_CLASS_LIST}
	COMMAND ${JAVA_COMPILE}
	-classpath ${PROJECT_BINARY_DIR}/jhop:${JARS} ${JAVA_GENERATED_SRC} ${JAVA_FILES_LIST}
	-d ${PROJECT_BINARY_DIR}/jhop
	DEPENDS ${JAVA_SWIG_DIR}/com/vicos/hop/JHOP.java jhop ${JAVA_FILES_LIST}
	COMMENT "Building Java bindings"
)

ADD_CUSTOM_COMMAND(
	OUTPUT ${PROJECT_BINARY_DIR}/jhop.jar
    COMMAND cmake -E copy ${PROJECT_BINARY_DIR}/libjhop.so ${PROJECT_BINARY_DIR}/jhop/com/vicos/hop/libjhop.so
	COMMAND ${JAVA_ARCHIVE} 
	-cfe ${PROJECT_BINARY_DIR}/jhop.jar com.vicos.hop.HOPImage
	-C "${PROJECT_BINARY_DIR}/jhop/" . 
	DEPENDS ${PROJECT_BINARY_DIR}/jhop/com/vicos/hop/JHOP.class jhop
	COMMENT "Creating JAR file"
	)

ADD_CUSTOM_TARGET(JHOP ALL DEPENDS ${PROJECT_BINARY_DIR}/jhop.jar)

IF (UNIX)
    INSTALL(FILES ${PROJECT_BINARY_DIR}/jhop.jar DESTINATION lib/java)
ENDIF (UNIX)

SET (ECLIPSE FALSE CACHE BOOL "Generate Eclipse project for Java binding")

IF (ECLIPSE)
INCLUDE(Eclipse)
ECLIPSE_GENERATE_PROJECT( ${PROJECT_ROOT} "JHOP" "${CMAKE_CURRENT_SOURCE_DIR}/src/;${JAVA_SWIG_DIR}" "${PROJECT_BINARY_DIR}/jhop/" "${JARS}" )
ENDIF (ECLIPSE)

